Enable file upload for document processing